Basic Header Works

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <script defer src="javascript.js"></script>
 
 </head>
-<body>
+<body bgcolor="lightgreen">
+
+    <header class="header">
+        <h1>Header-Samantha</h1>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+    </header>
 
 </body>
 </html>
