--- a/about.html
+++ b/about.html
@@ -8,7 +8,18 @@
     <script defer src="javascript.js"></script>
 
 </head>
-<body>
+<body bgcolor="lightblue">
+    <header class="header">
+        <h1>Header-Samantha</h1>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+    </header>
+
+
+
+
+</body>
 
 </body>
 </html>
