Basic Info added

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,13 +10,30 @@
 </head>
 <body bgcolor="lightpink">
     <header class="header">
-        <h1>Header-Samantha</h1>
+        <h1>Samantha Buckwalter</h1>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
     </header>
 
+    <div>
+        <p>
+            First Project
+        </p>
+    </div>
 
+    <div>
+        <p>
+            Second Project
+        </p>
+    </div>
+
+
+    <div>
+        <p>
+           Third Project
+        </p>
+    </div>
 
 
 
