--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,14 @@
     <script defer src="javascript.js"></script>
 
 </head>
-<body bgcolor="lightpink">
+<body bgcolor="lightgrey">
     <header class="header">
         <h1>Samantha Buckwalter</h1>
+        <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
+        </nav>
     </header>
 
     <div>
@@ -35,7 +37,9 @@
         </p>
     </div>
 
-
+    <footer class="footer">
+        <h4>Testing the footer</h4>
+    </footer>
 
 </body>
 </html>
