Final Touches and Clean Up

--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
         <a href="portfolio.html">Portfolio</a>
         </nav>
     </header>
+    <main>
+    <p class="titleSmall">Dance</p>
 
     <p class="body">Music and dancing have surrounded Samantha her entire life.  Being the daughter of Kelly (Buckwalter) Casanova, meant that every week she was tagging along to dances and workshops, doing her homework and playing her gameboy, while her mother worked to support the both of them.  Halls, studios, and conventions became her playgrounds.  It wasn’t until she was 10 years old and attended her mother’s convention, Swingbreak, that she actually wanted to learn what her mother did.  It was at this event that she saw Jordan Frisbee and Jessica Cox perform a Junior routine and from that point on she wanted to be a dancer.</p>
 
@@ -24,12 +26,22 @@
 
     <p class="body">Samantha had no intention of teaching or pursuing West Coast Swing as a career until 2006 at Capital Swing.  It was there that she saw Kyle Redd and Sarah Van Drake perform their “How long can a fool go wrong” routine and truly fell in love with the dance.  From that point on she began mentoring under her mother, assisting her classes and shadowing her as a judge to learn everything and anything she could about the dance.  Samantha worked diligently to earn her points in every division up from the Junior, Novice, Intermediate, Advanced and AllStar divisions to her current position competing with the top Champion dancers around the world.</p>
 
-    <p class="body">Starting in 2007, Samantha was fortunate to study under Mario Robau Jr.  She assisted him in workshops and intensives both in the US and abroad which she credits to her confident teaching foundation.  During 2009-2010 Samantha was presented a once in a life time opportunity by her dear friend, Mike Rosa, to re-locate to London.  It was there that she taught weekly classes, workshops, and events all over the UK and Europe in an effort to help the Swing community grow.  After her adventures in Europe, Samantha was convinced by her brand new friend at the time, Malia San Nicoles, to move to Southern California, which is where she now calls home.  Samantha was inducted into the California Swing Dance Hall of Fame in 2012 and continues to travel all over the world competing, coaching, and teaching with her partner Matt Richey.</p>
+    <p class="body">During 2009-2010 Samantha was presented a once in a life time opportunity by her dear friend, Mike Rosa, to re-locate to London.  It was there that she taught weekly classes, workshops, and events all over the UK and Europe in an effort to help the Swing community grow.  After her adventures in Europe, Samantha was convinced by her brand new friend at the time, Malia San Nicoles, to move to Southern California, which is where she now calls home.  Samantha was inducted into the California Swing Dance Hall of Fame in 2012 and continues to travel all over the world competing, coaching, and teaching with her partner Matt Richey.</p>
 
     <p class="body">One of Samantha’s proudest moments was becoming the first woman to final in a Champion’s division as a Leader, thanks to the help of Jennifer Deluca.  From her very first dance lesson, Samantha’s mother taught her to lead and follow at the same time.  This skill not only benefited Samantha’s teaching ability but also allowed her to be a role model to so many dancers wishing to learn the opposite role.  Samantha and her mother are proud to support the movement in the West Coast Swing community to allow anyone to learn and compete in any role they so chose.</p>
 
+    <p class="titleSmall">Real Estate</p>
+
+    <p class="body">Throughout my career, I've successfully closed over 30 transactions and was honored to receive the International President's Circle award in 2022 for top sales in the country. My passion lies in helping first-time home buyers navigate the exciting journey of purchasing their first home.</p>
+
+    <p class="body">As someone who has lived all over Southern California, I bring a wealth of local knowledge and expertise to the table, whether you are interested in the LA area or Orange County.</p>
+
+        <p class="body">On a personal note, I share my home with three wonderful dogs and a cat, adding joy and energy to my life. I look forward to connecting with you. Click below to learn more about who I am, and let’s grab a coffee sometime to chat about your real estate needs!</p>
+    </main>
     <footer class="footer">
-        <h4>Testing the footer</h4>
+        <p class="footTitle">Contact Me</p>
+        <p class="footText">Email: Sbuckwalter7@gmail.com</p>
+        <p class="footText">Phone: 707-696-5401</p>
     </footer>
 
 </body>
