--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <p class="title">Full-Stack Developer</p>
 
 
-            <p class="body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aperiam obcaecati nam blanditiis maxime amet consequuntur voluptatem saepe doloribus? Voluptas obcaecati quis, vero ullam blanditiis sit id pariatur quod eligendi.</p>
+            <p class="body">Hello and welcome! I am a Fullstack Developer and a proud graduate of the Grace Hopper Program. While I am new to the tech industry, I bring over 20 years of professional experience running my own businesses and collaborating within teams. This extensive background has equipped me with a unique blend of skills, including problem-solving, project management, and effective communication.</p>
+            <p class="body">I am eager to embark on this new career path and confident in the value I can bring to any development team. My entrepreneurial experience has instilled in me a strong work ethic and a keen understanding of client needs, both of which are crucial in the tech world. I am excited to leverage my diverse skill set and fresh perspective to contribute to innovative projects and drive success.</p>
+            <p class="body">Thank you for taking the time to learn a bit about me. I look forward to the opportunity to connect and explore how I can be a valuable asset to your team!</p>
         </div>
 
         <div>
@@ -32,8 +34,14 @@
         </div>
     </div>
 
+    <div  class="quote">
+    <p>"Be the change you wish to see in the world"</p>
+    </div>
+
     <footer class="footer">
-        <h4>Testing the footer</h4>
+        <p class="footTitle">Contact Me</p>
+        <p class="footText">Email: Sbuckwalter7@gmail.com</p>
+        <p class="footText">Phone: 707-696-5401</p>
     </footer>
 
 </body>
