--- a/portfolio.html
+++ b/portfolio.html
@@ -18,27 +18,27 @@
         </nav>
     </header>
 
-    <div>
-        <p>
-            First Project
-        </p>
+    <div class="portfolio">
+        <div class="portCard">
+        <p class="titleSmall">Professional West Coast Swing Website</p>
+        <p class="body">Click the link below to check out my first professional Website!</p>
+        <a class="externalLink" href="https://itsallswing.dance/">Check it Out!</a>
+        </div>
+<br>
+        <div class="portCard">
+        <p class="titleSmall">Professional Real Estate Website</p>
+        <p class="body">Click the link below to check out my second professional Website!</p>
+        <a class="externalLink" href="https://adamsbuckwalter.com/">Check it Out!</a>
+        </div>
     </div>
 
-    <div>
-        <p>
-            Second Project
-        </p>
-    </div>
 
 
-    <div>
-        <p>
-           Third Project
-        </p>
-    </div>
 
     <footer class="footer">
-        <h4>Testing the footer</h4>
+        <p class="footTitle">Contact Me</p>
+        <p class="footText">Email: Sbuckwalter7@gmail.com</p>
+        <p class="footText">Phone: 707-696-5401</p>
     </footer>
 
 </body>
